@@ -15,8 +15,14 @@
     {
         "Entry"
         {
-        "MsmKey" = "8:_B78AA4FE57C1DEFCECA046D5567306E8"
+        "MsmKey" = "8:_014C55615235A548814A547CB66B14EC"
         "OwnerKey" = "8:_C3EA25669E384EEBBB25C4C1B473C9D8"
+        "MsmSig" = "8:_UNDEFINED"
+        }
+        "Entry"
+        {
+        "MsmKey" = "8:_1CAA389F3B1246B5AE5D55B862FDBE22"
+        "OwnerKey" = "8:_UNDEFINED"
         "MsmSig" = "8:_UNDEFINED"
         }
         "Entry"
@@ -46,7 +52,7 @@
         "Entry"
         {
         "MsmKey" = "8:_UNDEFINED"
-        "OwnerKey" = "8:_B78AA4FE57C1DEFCECA046D5567306E8"
+        "OwnerKey" = "8:_014C55615235A548814A547CB66B14EC"
         "MsmSig" = "8:_UNDEFINED"
         }
     }
@@ -74,6 +80,14 @@
             "PrerequisitesLocation" = "2:1"
             "Url" = "8:"
             "ComponentsUrl" = "8:"
+                "Items"
+                {
+                    "{EDC2488A-8267-493A-A98E-7D9C3B36CDF3}:.NETFramework,Version=v4.5"
+                    {
+                    "Name" = "8:Microsoft .NET Framework 4.5 (x86 and x64)"
+                    "ProductCode" = "8:.NETFramework,Version=v4.5"
+                    }
+                }
             }
         }
         "Release"
@@ -98,6 +112,14 @@
             "PrerequisitesLocation" = "2:1"
             "Url" = "8:"
             "ComponentsUrl" = "8:"
+                "Items"
+                {
+                    "{EDC2488A-8267-493A-A98E-7D9C3B36CDF3}:.NETFramework,Version=v4.5"
+                    {
+                    "Name" = "8:Microsoft .NET Framework 4.5 (x86 and x64)"
+                    "ProductCode" = "8:.NETFramework,Version=v4.5"
+                    }
+                }
             }
         }
     }
@@ -128,14 +150,14 @@
         }
         "File"
         {
-            "{9F6F8455-1EF1-4B85-886A-4223BCC8E7F7}:_B78AA4FE57C1DEFCECA046D5567306E8"
+            "{9F6F8455-1EF1-4B85-886A-4223BCC8E7F7}:_014C55615235A548814A547CB66B14EC"
             {
             "AssemblyRegister" = "3:1"
             "AssemblyIsInGAC" = "11:FALSE"
-            "AssemblyAsmDisplayName" = "8:ResolveUR.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=84d825ad185082b8, processorArchitecture=MSIL"
+            "AssemblyAsmDisplayName" = "8:ResolveUR.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=9c5b65c309c94841, processorArchitecture=MSIL"
                 "ScatterAssemblies"
                 {
-                    "_B78AA4FE57C1DEFCECA046D5567306E8"
+                    "_014C55615235A548814A547CB66B14EC"
                     {
                     "Name" = "8:ResolveUR.Library.dll"
                     "Attributes" = "3:512"
@@ -157,6 +179,26 @@
             "Register" = "3:1"
             "Exclude" = "11:FALSE"
             "IsDependency" = "11:TRUE"
+            "IsolateTo" = "8:"
+            }
+            "{1FB2D0AE-D3B9-43D4-B9DD-F88EC61E35DE}:_1CAA389F3B1246B5AE5D55B862FDBE22"
+            {
+            "SourcePath" = "8:..\\ResolveUR.Console\\ReadMe.md"
+            "TargetName" = "8:ReadMe.md"
+            "Tag" = "8:"
+            "Folder" = "8:_4251BC18AF924880938DBE93A6B93CD5"
+            "Condition" = "8:"
+            "Transitive" = "11:FALSE"
+            "Vital" = "11:TRUE"
+            "ReadOnly" = "11:FALSE"
+            "Hidden" = "11:FALSE"
+            "System" = "11:FALSE"
+            "Permanent" = "11:FALSE"
+            "SharedLegacy" = "11:FALSE"
+            "PackageAs" = "3:1"
+            "Register" = "3:1"
+            "Exclude" = "11:FALSE"
+            "IsDependency" = "11:FALSE"
             "IsolateTo" = "8:"
             }
         }
@@ -216,7 +258,7 @@
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:ResolveUR"
         "ProductCode" = "8:{BA84BA88-F0E1-471B-B5BD-943F363D5184}"
-        "PackageCode" = "8:{7FEA16CA-D97F-467A-9893-930D62DE8CF1}"
+        "PackageCode" = "8:{D4473FB9-2A7C-4675-8749-D140B8B28151}"
         "UpgradeCode" = "8:{690729C4-B969-4D4E-9F01-E27B0AB7CE7B}"
         "AspNetVersion" = "8:4.0.30319.0"
         "RestartWWWService" = "11:FALSE"
