@@ -1,1 +1,2 @@
-This release adds a progress dialog as well as removal of nuget references in conjunction with assembly references. Package folders are also deleted.
+Unused References are presented in machine's default text editor and allows excluding references from removal. 
+A final confirmation is also added so no changes are done should user decides to change his/her mind.
